<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/main_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dip"
            android:layout_marginTop="48dip"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                style="@style/login_edit"
                android:drawableLeft="@drawable/login_icon_account"
                android:hint="@string/login_username_hint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_usermail"
                style="@style/login_edit"
                android:drawableLeft="@drawable/login_icon_account"
                android:hint="@string/register_usermail_hint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_password"
                style="@style/login_edit"
                android:drawableLeft="@drawable/login_icon_password"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_password_confirm"
                style="@style/login_edit"
                android:drawableLeft="@drawable/login_icon_password"
                android:hint="@string/register_password_confirm_hint"
                android:inputType="textPassword" />
        </LinearLayout>
        
        <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dip"
        android:layout_marginRight="22dip"
        android:layout_marginTop="22dip"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:padding="8dip"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    </LinearLayout>

    

</LinearLayout>