<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                style="@style/login_edit"
                android:drawableLeft="@drawable/login_icon_account"
                android:hint="@string/login_username_hint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

         

                <EditText
                    android:id="@+id/et_password"
                    style="@style/login_edit"
                    android:drawableLeft="@drawable/login_icon_password"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword" />

               
          
        </LinearLayout>
        
             <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:id="@+id/ll_save_pwd"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/iv_save_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_pwd_save_selector" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dip"
                        android:text="@string/save_password" />
                </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dip"
            android:layout_marginRight="22dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:padding="8dip"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>